--- a/analysis/references.bib
+++ b/analysis/references.bib
@@ -98,7 +98,7 @@
 }
 
 @techreport{hofmeister2002,
-    title = {Hazard map of potential rapidly moving landslides in western Oregon, Interpretive Map Series - 22},
+         title = {Hazard map of potential rapidly moving landslides in western Oregon, Interpretive Map Series - 22},
 	author = {Hofmeister, R. J. and Miller, D. J. and Mills, K. A. and Hinkle, J. C. and Beier, A. C.},
 	year = {2002},
 	institution = {Oregon Department of Geology and Mineral Industries},
@@ -121,7 +121,7 @@
 }
 
 @techreport{robison1999,
-    title = {Storm impacts and landslides of 1996: final report},
+         title = {Storm impacts and landslides of 1996: final report},
 	author = {Robison, G. E. and Mills, K. A. and Paul, J. and Dent, L. and Skaugset, A.},
 	year = {1999},
 	institution = {Oregon Department of Forestry}
@@ -185,7 +185,7 @@
 }
 
 @techreport{burns2022,
-    title = {Protocol for channelized debris flow susceptibility mapping},
+         title = {Protocol for channelized debris flow susceptibility mapping},
 	author = {Burns, W. J. and Franczyk, J. J. and Calhoon, N. C.},
 	year = {2022},
 	institution = {Oregon Department of Geology and Mineral Resources},
@@ -194,7 +194,7 @@
 }
 
 @article{burnett2007,
-    title = {Streamside policies for headwater channels: an example considering debris flows in the Oregon Coastal Province},
+         title = {Streamside policies for headwater channels: an example considering debris flows in the Oregon Coastal Province},
 	author = {Burnett, K. M. and Miller, D. J.},
 	year = {2007},
 	journal = {Forest Science},
@@ -204,7 +204,7 @@
 }
 
 @techreport{odf2022,
-    title = {Private Forest Accord Report},
+         title = {Private Forest Accord Report},
 	author = {Oregon Department of Forestry},
 	year = {2022},
 	institution = {Oregon Department of Forestry},
@@ -270,7 +270,7 @@
 }
 
 @techreport{miller2015,
-    title = {Creation of a digital flowline network from IfSAR 5-m DEMs for the Matanuska-Susitna Basins: a resource for update of the National Hydrographic Dataset in Alaska},
+         title = {Creation of a digital flowline network from IfSAR 5-m DEMs for the Matanuska-Susitna Basins: a resource for update of the National Hydrographic Dataset in Alaska},
 	author = {Miller, D. J. and Benda, L. and DePasquale, J. and Albert, D.},
 	year = {2015},
 	institution = {The Nature Conservancy},
@@ -482,7 +482,7 @@
 }
 
 @mastersthesis{may_MS1998,
-    title = {Debris Flow Characteristics Associated with Forest Practices in the Central Oregon Coast Range},
+         title = {Debris Flow Characteristics Associated with Forest Practices in the Central Oregon Coast Range},
 	author = {May, C. L.},
 	year = {1998},
 	school = {Oregon State University},
@@ -534,7 +534,7 @@
 }
 
 @article{dietrich1978,
-    title = {Sediment budget for a small catchment in mountainous terrain},
+         title = {Sediment budget for a small catchment in mountainous terrain},
 	author = {Dietrich, W. E. and Dunne, T.},
 	year = {1978},
 	journal = {Zietshrift für Geomorphologie},
@@ -543,7 +543,7 @@
 }
 
 @inbook{dietrich1982,
-    author = {Dietrich, W. E. and Dunne, T. and Humphrey, N. F. and Reid, L. M.},
+         author = {Dietrich, W. E. and Dunne, T. and Humphrey, N. F. and Reid, L. M.},
 	title = {Construction of sediment budgets for drainage basins},
 	booktitle = {Sediment Budgets and Routing in Forested Drainage Basins, General Technical Report PNW-141},
 	year = {1982},
@@ -601,4 +601,45 @@
 	year = {1998}
 }
 
-	
+@techreport{coho1993,
+    title = {Dam-break floods in low order mountain channels of the Pacific Northwest},
+    author = {Coho, C. and Burges, S. J.},
+    institution = {Department of Civil Engineering, University of Washington},
+	year = {1993},
+	number = {TFW-SH9-93-001},
+	url = {https://www.dnr.wa.gov/publications/fp_tfw_sh9_93_001.pdf}
+}
+@article{miller2000,
+	author = {Miller, Daniel J. and Benda, Lee E.},
+	year = {2000},
+	date = {2000},
+	journal = {Geological Society of America Bulletin},
+	pages = {1814},
+	volume = {112},
+	number = {12},
+	doi = {10.1130/0016-7606(2000)112<1814:eopsso>2.0.co;2},
+	url = {http://dx.doi.org/10.1130/0016-7606(2000)112<1814:EOPSSO>2.0.CO;2}
+}
+
+@article{jakob2007,
+	title = {Integrating uncertainty: Canyon Creek hyperconcentrated flows of November 1989 and 1990},
+	author = {Jakob, Matthias and Weatherly, Hamish},
+	year = {2007},
+	month = {11},
+	date = {2007-11-17},
+	journal = {Landslides},
+	pages = {83--95},
+	volume = {5},
+	number = {1},
+	doi = {10.1007/s10346-007-0106-z},
+	url = {http://dx.doi.org/10.1007/s10346-007-0106-z},
+	langid = {en}
+}
+
+@mastersthesis{johnson1991,
+        title = {Effects of landslide-dam-break floods on channel morphology},
+        author = {Johnson, A. C.},
+        year = {1991},
+        school = {University of Washington},
+        url = {https://www.dnr.wa.gov/publications/fp_tfw_land_dam_brea_1991.pdf}
+}
